Lesson 1. Homework partial checked

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
           <li>
             <a href="#">Почему мы?</a>
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <a href="#">Номера</a>
+          </li>
+          <li>
+            <a href="#">Отзывы</a>
+          </li>
+          <li>
+            <a href="#">Как нас найти</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -31,11 +37,63 @@
       <!-- page main content -->
       <article>
         <header>
+          <address>Санкт-Петербург</address>
+          <p>Котейка</p>
           <h1>Уютная гостиница для котов и кошек</h1>
-        </header>
 
+
+
+          <!-- Зачем обернул в p? -->
+          <p><button>Забронировать<img src="#" alt="Лапка котика"></button></p>
+        </header>
       </article>
     </main>
+    <section>
+
+
+
+      <!-- Тут должен быть h2, тк заголовки должны идти по порядку -->
+      <h3> Почему мы?</h3>
+      <ul>
+
+
+        <!-- Зачем type? Он тут не нужен, тк type относится к визуальному отображению списка, мы сейчас делаем только разметку и в css напишем как он должен выглядеть -->
+        <!-- Это важный момент, нужно разделять разметку и визуалку -->
+        <li type="none">
+
+
+          <!-- 1. Зачем обернул в p? 2. Мы об этом еще не говорили, но тут мы не будем использовать тег img (я поэтому сказал не размечай картинки пока =)-->
+          <p><img src="#" alt="Градусник"></p>
+          <p><b>Комфортная температура</b></p>
+          <p>Во всех номерах поддерживается комфортная температура в пределах 23 - 25 градусов. В каждом номере можно дополнительно отрегулировать температуру. </p>
+        </li>
+        <li type="none">
+          <p><img src="#" alt="Видеокамера"></p>
+          <p><b>Видеонаблюдение</b></p>
+          <p>Мы предоставляем доступ в нашу систему. Вы сможете следить за своим питомцем со своего смартфона или компьютера. </p>
+        </li>
+        <li type="none">
+          <p><img src="#" alt="Такси"></p>
+          <p><b>Услуги зоотакси</b></p>
+          <p>Мы приедем за вашим питомцем в любой район Санкт-Петербурга. </p>
+        </li>
+        <li type="none">
+          <p><img src="#" alt="Миска с кормом"></p>
+          <p><b>Сбалансированное питание</b></p>
+          <p>Вы можете привезти свой корм или доверить рацион своего питомца нашим профессионалам.</p>
+        </li>
+        <li type="none">
+          <p><img src="#" alt="Кошка"></p>
+          <p><b>Ежедневные прогулки</b></p>
+          <p>По вашему желанию мы выгуливаем вашего питомца два раза в день на специализированной закрытой территории. </p>
+        </li>
+        <li type="none">
+          <p><img src="#" alt="Заботливые ветеринары"></p>
+          <p><b>Лучшие ветеринары</b></p>
+          <p>В гостинице 24 часа дежурит ветеринарный врач, который окажет любую помощь в случае необходимости. </p>
+        </li>
+      </ul>
+    </section>
     <footer>
       <!-- page footer -->
       <a class="logo logo--footer" href="#">
